name:                ironmq
version:             0.1.0
synopsis:            IronMQ client
description:         A simple Haskell IronMQ client
homepage:            http://github.com/Feeniks/ironmq
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.IronMQ, Network.IronMQ.JSON
  build-depends:       base >= 4.7 && < 5 
                     , wreq >= 0.3.0.1 
                     , aeson >= 0.7.0.3 
                     , bytestring >= 0.10.4.0 
                     , text >= 1.2.0.6 
                     , http-client >= 0.4.12 
                     , http-types >= 0.8.6 
                     , lens >= 4.7.0.1  
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Feeniks/ironmq
