name:                ironmq
version:             0.2.0
synopsis:            IronMQ client
description:         A simple Haskell IronMQ client
homepage:            http://github.com/Feeniks/ironmq
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.IronMQ, Network.IronMQ.JSON, Network.IronMQ.Types, Network.IronMQ.Instances
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , bytestring >= 0.10.4.0
                     , http-conduit >= 2.1.8
                     , http-client >= 0.4.12
                     , http-client-tls >= 0.2.2
                     , exceptions >= 0.8.0.2
                     , http-types >= 0.8.6
                     , aeson >= 0.7.0.3
                     , lens >= 4.7.0.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Feeniks/ironmq
